# BeautyPulse

./: LICENSE  README.md  brand_summary.csv  download  market_summary.csv  pyproject.toml  requirements.txt
config/: brands.csv  keywords.csv  source_registry.csv
dashboard/: app.py
data/external_aggregates/: google_trends_brand_summary.csv  google_trends_quality.json  google_trends_weekly_calibrated.csv  oliveyoung_global_homepage_2026-07-11.csv  oliveyoung_makeup_top20_2026-07-11.csv
data/processed/: posts.csv
data/sample/: demo_posts.csv  google_trends_template.csv  oliveyoung_ranking_template.csv
docs/: compliance.md  data_dictionary.md  data_source_plan.md  github_setup.md  methodology.md  resume_material.md
reports/: platform_category.csv  sentiment_summary.csv
reports/real_sample/: README.md  brand_summary.csv  data_quality.json  market_summary.csv  multisource_brand_coverage.csv  multisource_brand_coverage_v2.csv  search_keyword_summary.csv
scripts/: analyze_real_sample.py  build_multisource_summary.py  generate_demo_data.py  import_external.py  import_market_signal.py  process_google_trends.py  run_pipeline.py
src/: adapters.py  cleaning.py  features.py  schema.py
src/beautypulse/: __init__.py  analysis.py
tests/: test_cleaning.py  test_features.py
